# hackathon_polkadot_encode_2024_q1

./: .gitignore  README.md  docker-compose.yml  package.json  tsconfig.json
contracts/oh_my_chess/: Cargo.toml
contracts/oh_my_chess/src/: lib.rs
deploy/: deploy_contract.ts  package.json
frontend/: .dockerignore  package-lock.json  package.json  tsconfig.json
frontend/resources/: oh_my_chess.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CreateNewSessionModal.tsx  HorizontalMenu.tsx  JoinSessionModal.tsx  Modal.tsx  OhMyChessBoard.tsx  VerticalMenu.tsx  VerticalMenuView.tsx
frontend/src/hooks/: usePhatContractOhMyChess.ts
frontend/src/models/: api-result.ts  game-session.ts  result.ts
frontend/src/services/: phat-contract.ts
